--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
         <div class="header">
             <h1> Currency Converter</h1>
         </div>
-        <div class="name"> Anton Gowthaman </div> <div class="date"> 2022-01-01</div>
+        <nav>
+            <a href="dashboard.html" ><button class="dashboardbtn"><i class="fas fa-long-arrow-alt-left"></i>Dashboard</button></a>
+        </nav>
+        <div class="date"> 2022-01-01</div>
         <ul class="currencies"></ul>
         <button class="add-currency-btn open"><i class="fas fa-long-arrow-alt-left"></i>Add Currency</button>
         <ul class="add-currency-list"></ul>
