--- a/dashboard.html
+++ b/dashboard.html
@@ -40,35 +40,25 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <!-- Photo grid -->
   <div class="w3-row">
     <div class="w3-third">
-      <img src="/images/GBPvsUSD.jpg" style="width:100%" onclick="onClick(this)" alt="GBP exchange rate against USD during 2021">
-      <img src="/w3images/girl_mountain.jpg" style="width:100%" onclick="onClick(this)" alt="What a beautiful scenery this sunset">
-      <img src="/w3images/girl.jpg" style="width:100%" onclick="onClick(this)" alt="The Beach. Me. Alone. Beautiful">
+      <img src="/images/gbpvdusd.png" style="width:100%" onclick="onClick(this)" alt="GBP exchange rate against USD over the last 10 years">
+      <img src="/images/White.jpg" style="width:100%" >
+      <img src="/images/gbpvsjpy.png" style="width:100%" onclick="onClick(this)" alt="GBP exchange rate against JPY over the last 5 years">
     </div>
 
     <div class="w3-third">
-      <img src="/w3images/boy.jpg" style="width:100%" onclick="onClick(this)" alt="Quiet day at the beach. Cold, but beautiful">
-      <img src="/w3images/man_bench.jpg" style="width:100%" onclick="onClick(this)" alt="Waiting for the bus in the desert">
-      <img src="/w3images/natureboy.jpg" style="width:100%" onclick="onClick(this)" alt="Nature again.. At its finest!">
+      <img src="/images/White.jpg" style="width:100%" >
+      <img src="/images/gbpvseur.png" style="width:100%" onclick="onClick(this)" alt="GBP exchange rate against EUR during 2021">
+      <img src="/images/White.jpg" style="width:100%" >
     </div>
     
     <div class="w3-third">
-      <img src="/w3images/girl.jpg" style="width:100%" onclick="onClick(this)" alt="Canoeing again">
-      <img src="/w3images/girl_train.jpg" style="width:100%" onclick="onClick(this)" alt="A girl, and a train passing">
-      <img src="/w3images/closegirl.jpg" style="width:100%" onclick="onClick(this)" alt="What a beautiful day!">
+      <img src="/images/GBPvsINR.png" style="width:100%" onclick="onClick(this)" alt="GBP exchange rate against INR during 2021">
+      <img src="/images/White.jpg" style="width:100%" >
+      <img src="/images/gbpvschf.png" style="width:100%" onclick="onClick(this)" alt="GBP exchange rate against CHF over the last 5 years">
     </div>
   </div>
 
-  <!-- Pagination -->
-  <div class="w3-center w3-padding-32">
-    <div class="w3-bar">
-      <a href="#" class="w3-bar-item w3-button w3-hover-black">«</a>
-      <a href="#" class="w3-bar-item w3-black w3-button">1</a>
-      <a href="#" class="w3-bar-item w3-button w3-hover-black">2</a>
-      <a href="#" class="w3-bar-item w3-button w3-hover-black">3</a>
-      <a href="#" class="w3-bar-item w3-button w3-hover-black">4</a>
-      <a href="#" class="w3-bar-item w3-button w3-hover-black">»</a>
-    </div>
-  </div>
+ 
   
   <!-- Modal for full size images on click-->
   <div id="modal01" class="w3-modal w3-black" style="padding-top:0" onclick="this.style.display='none'">
